Fixed h1 wrapping

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h1 {
     grid-column: 5 / span 4;
     font-size: 5rem;
     color: whitesmoke;
+    white-space: nowrap;
 }
 
 /* 
